added picture rendering, and some basic test algorithm

--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -1,14 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{% static 'index.css' %}">
 </head>
 <body>
-<h2> HELLO GAME</h2>
-<h2> HELLO GAME</h2>
-<h2> HELLO GAME</h2>
-<h2> HELLO GAME</h2>
+<h2> PLAY NOW </h2>
+
+
+<div class="pictures">
+    {% for each in pictures %}
+    <div>
+        <form class="pic" method='post' action="{% url 'edit' each.pk %}">
+                <button class="pic">
+                    {% if each.is_open or each.is_known %}
+                     <img src='{{ each.pic.url }}'  alt="pic_cards" width="200px" height="200">
+                    {% else %}
+                    <img src='{{ secret.pic.url }}'  alt="pic_cards" width="200px" height="200">
+                    {% endif %}
+                </button>
+                {% csrf_token %}
+            </form>
+    </div>
+    {% endfor %}
+</div>
 
 </body>
 </html>
