--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -5,9 +5,28 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'index.css' %}">
+    <script>
+function startTime() {
+  const today = new Date();
+  let h = today.getHours();
+  let m = today.getMinutes();
+  let s = today.getSeconds();
+  m = checkTime(m);
+  s = checkTime(s);
+  document.getElementById('txt').innerHTML =  h + ":" + m + ":" + s;
+  setTimeout(startTime, 1000);
+}
+
+function checkTime(i) {
+  if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+  return i;
+}
+</script>
+
 </head>
-<body>
+<body onload="startTime()">
 <h2> PLAY NOW </h2>
+<div id="txt"></div>
 
 
 <div class="pictures">
