--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -5,28 +5,31 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'index.css' %}">
-    <script>
-function startTime() {
-  const today = new Date();
-  let h = today.getHours();
-  let m = today.getMinutes();
-  let s = today.getSeconds();
-  m = checkTime(m);
-  s = checkTime(s);
-  document.getElementById('txt').innerHTML =  h + ":" + m + ":" + s;
-  setTimeout(startTime, 1000);
-}
-
-function checkTime(i) {
-  if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-  return i;
-}
-</script>
+    <script type="text/JavaScript" src="{% static 'index.js' %}"> </script>
 
 </head>
 <body onload="startTime()">
 <h2> PLAY NOW </h2>
 <div id="txt"></div>
+{#<div id="demo"></div>#}
+{#<div class="time">#}
+{#<div onload="" id="countdown">#}
+</div>
+{#</div>#}
+{#<div> {{ time }}</div>#}
+{#<h3>#}
+{#  <span onload="displayRemainingTime()" id="countdown"></span>#}
+{#    <div>#}
+{#        <script> countdown()</script>#}
+{#    </div>#}
+{#</h3>#}
+
+
+
+
+
+
+
 
 
 <div class="pictures">
