--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'index.css' %}">
-    <script type="text/JavaScript" src="{% static 'index.js' %}"> </script>
+    <script type="text/JavaScript" src="{% static 'index.js' %}">
+
+   </script>
 
 </head>
 <body onload="startTime()">
@@ -14,6 +16,7 @@
 {#<div id="demo"></div>#}
 {#<div class="time">#}
 {#<div onload="" id="countdown">#}
+
 </div>
 {#</div>#}
 {#<div> {{ time }}</div>#}
@@ -36,18 +39,18 @@
     {% for each in pictures %}
     <div>
     {% if not each.clicked %}
-{#        <img src='{{ each.pic.url }}'  alt="pic_cards" width="100px" height="100">#}
-        <form class="pic" method='post' action="{% url 'edit' each.pk %}">
-
-                <button class="pic">
-                    {% if each.is_open or each.is_known %}
-                     <img src='{{ each.pic.url }}'  alt="pic_cards" width="100px" height="100">
-                    {% else %}
-                    <img src='{{ secret.pic.url }}'  alt="pic_cards" width="100px" height="100">
-                    {% endif %}
-                </button>
-                {% csrf_token %}
-            </form>
+        <img src='{{ each.pic.url }}'  alt="pic_cards" width="100px" height="100">
+{#        <form class="pic" method='post' action="{% url 'edit' each.pk %}">#}
+{##}
+{#                <button class="pic">#}
+{#                    {% if each.is_open or each.is_known %}#}
+{#                     <img src='{{ each.pic.url }}'  alt="pic_cards" width="100px" height="100">#}
+{#                    {% else %}#}
+{#                    <img src='{{ secret.pic.url }}'  alt="pic_cards" width="100px" height="100">#}
+{#                    {% endif %}#}
+{#                </button>#}
+{#                {% csrf_token %}#}
+{#            </form>#}
     {% else %}
                     {% if each.is_open or each.is_known %}
                      <img src='{{ each.pic.url }}'  alt="pic_cards" width="100px" height="100">
