--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -66,7 +66,7 @@
 
 <div>
     <form class="pic" method='get' action="{% url 'restart' %}">
-                <button class="pic">Restart
+                <button class="pic">New game
                 </button>
                 {% csrf_token %}
             </form>
