added some test for choice the board

--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -27,7 +27,15 @@
 {#    </div>#}
 {#</h3>#}
 
-
+{#<div>#}
+{#     <form class="choose" method='post' action="{% url 'choice' %}">#}
+{#         {{ form.as_p }}#}
+{#                <button class="pic">Choose size#}
+{#                </button>#}
+{#                {% csrf_token %}#}
+{#            </form>#}
+{##}
+{#</div>#}
 
 
 
